# GofWxWidgets

./: .gitignore  CMakeLists.txt  GofEngine.cpp  GofEngine.h  README.md  gui.cpp  gui.fbp  gui.h  main.cpp  main.h
resources/: sample.rc
